--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
  <h1>Emma Loraine Johnson</h1>
+ image
+ <h2>CIT 230: Assignment Portal</h2>
+ <ul>
+     <li>Lesson 02: </li>
+ </ul>
 </body>
 </html> 
