--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
  image
  <h2>CIT 230: Assignment Portal</h2>
  <ul>
-     <li>Lesson 02: </li>
+     <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
+     <li>Lesson 03: <a href="https://emloraine.github.io/lesson03.html">Assignment Link</a></li>
+     <li>Lesson 04: <a href="https://emloraine.github.io/lesson04.html">Assignment Link</a></li>
  </ul>
 </body>
 </html> 
