--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <ul>
      <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
      <li>Lesson 03: <a href="https://emloraine.github.io/lesson03.html">Assignment Link</a></li>
-     <li>Lesson 04: <a href="https://emloraine.github.io/lesson04.html">Assignment Link</a></li>
+     <li>Lesson 04: <a href="https://emloraine.github.io/lesson04.html">Link</a> | <a href="https://emloraine.github.io/lesson04.2.html">Link</a></li>
  </ul>
 </body>
 </html> 
