--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!doctype html>
 <html lang="en-us">
 <head>
-  <title>Emma Loraine Johnson</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Emma Loraine Johnson - Portal</title>
 </head>
 <body>
- <h1>Emma Loraine Johnson</h1>
- image
- <h2>CIT 230: Assignment Portal</h2>
- <ul>
-     <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
-     <li>Lesson 03: <a href="https://emloraine.github.io/lesson03.html">Assignment Link</a></li>
-     <li>Lesson 04: <a href="https://emloraine.github.io/lesson04.html">Link</a> | <a href="https://emloraine.github.io/lesson04.2.html">Link</a></li>
- </ul>
+    <header>
+        <h1>Emma Loraine Johnson</h1>
+        image
+    </header>
+    <main>
+        <h2>CIT 230: Assignment Portal</h2>
+        <ul>
+             <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
+             <li>Lesson 03: <a href="https://emloraine.github.io/lesson03.html">Assignment Link</a></li>
+             <li>Lesson 04: <a href="https://emloraine.github.io/lesson04.html">Link</a> | <a href="https://emloraine.github.io/lesson04.2.html">Link</a></li>
+        </ul>
+    </main>    
+    <footer>
+        <p>&copy; | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        Last Updated
+    </footer>
 </body>
 </html> 
