--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Emma Loraine Johnson - Portal</title>
+    <title>Emma Johnson Portal</title>
+    <script>
+        function getFullYear() {
+            document.getElementById('dateoutput').innerHTML = getFullYear;
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -20,7 +25,7 @@
         </ul>
     </main>    
     <footer>
-        <p>&copy; | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p>&copy;<div id="dateoutput"></div> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
         Last Updated
     </footer>
 </body>
