--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emma Johnson Portal</title>
     <script>
-        function getFullYear() {
-            document.getElementById('dateoutput').innerHTML = getFullYear;
+        function date {
+            var d = getFullYear();
+            document.getElementById('dateoutput').innerHTML = d;
         }
     </script>
 </head>
