--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emma Johnson Portal</title>
     <script>
-        function date {
+        function date() {
             var d = getFullYear();
             document.getElementById('dateoutput').innerHTML = d;
         }
