--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emma Johnson Portal</title>
     <script>
-        function date() {
-            var d = getFullYear();
-            document.getElementById('dateoutput').innerHTML = d;
-        }
+        document.getElementById("year").innerHTML = new Date().getFullYear();
     </script>
 </head>
 <body>
@@ -26,7 +23,7 @@
         </ul>
     </main>    
     <footer>
-        <p>&copy;<div id="dateoutput"></div> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p>&copy;<span id="year"></span> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
         Last Updated
     </footer>
 </body>
