--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emma Johnson Portal</title>
-    <script>
-        document.getElementById("year").innerHTML = new Date().getFullYear();
-    </script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
+<body onload="outputyear()">
     <header>
         <h1>Emma Loraine Johnson</h1>
         image
