--- a/lesson04.2.html
+++ b/lesson04.2.html
@@ -5,9 +5,8 @@
     <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development Lesson 04 at Brigham Young University - Idaho">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emma Johnson Lesson 4 | Page 1</title>
-    <script>
-
-    </script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
