--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body onload="outputyear()">
+<body onload="outputyear(), lastModified()">
     <header>
         <h1>Emma Loraine Johnson</h1>
         image
