--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>    
     <footer>
         <p>&copy;<span id="year"></span> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
-        <span id="last"></span>
+        <p>Last Updated: <span id="last"></span></p>
     </footer>
 </body>
 </html> 
