--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="outputyear(), lastModified()">
     <header>
         <h1>Emma Loraine Johnson</h1>
-        <img src="file:///C:/Users/Emper/OneDrive/Pictures/Professional%20Photo%20of%20me%20Smaller.jpg" alt="Photo of Emma">
+        <img src="<img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="Photo of Emma">
     </header>
     <main>
         <h2>CIT 230: Assignment Portal</h2>
