--- a/lesson03.html
+++ b/lesson03.html
@@ -16,8 +16,8 @@
        
     </main>    
     <footer>
-        <p>&copy; | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
-        Last Updated
+        <p>&copy;<span id="year"></span> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p>Last Updated: <span id="last"></span></p>
     </footer>
 </body>
 </html>
