--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Emma Johnson Portal</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
     </head>
 
