--- a/lesson04.html
+++ b/lesson04.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development Lesson 04 at Brigham Young University - Idaho">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emma Johnson Lesson 4 | Page 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
