--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </main>    
         <footer>
             <p>&copy;<span id="year"></span> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
-            <p>Last Updated: <span id="last"></span></p>
+            <p class="updated">Last Updated: <span id="last"></span></p>
         </footer>
     </body>
 </html> 
