--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Emma Loraine Johnson</h1>
         </header>
         <main>
-            <img class="photoofme" src="https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321" alt="Photo of Emma" width="100">
+            <img class="photoofme" src="https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321" alt="Photo of Emma">
             <h2>CIT 230: Assignment Portal</h2>
             <ul>
                  <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
