--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body onload="outputyear(), lastModified()">
         <header>
             <h1>Emma Loraine Johnson</h1>
-        </header>
+        </header> https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321"
         <main>
-            <img class="photoofme" src="https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321" alt="Photo of Emma">
+            <img class="photoofme" src="C:\Users\Emper\WDD 230\emloraine.github.io\Professional Photo of me Smaller.jpg" alt="Photo of Emma">
             <h2>CIT 230: Assignment Portal</h2>
             <ul>
                  <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
@@ -24,7 +24,7 @@
             </ul>
         </main>    
         <footer>
-            <p>&copy;<span id="year"></span> | Emma Loraine Johnson | Washington | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+            <p>&copy;<span id="year"></span> | Emma Loraine Johnson | Washington | <a class="byuilink" href="https://www.byui.edu/online">BYUI Online Learning</a></p>
             <p class="updated">Last Updated: <span id="last"></span></p>
         </footer>
     </body>
