--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <body onload="outputyear(), lastModified()">
         <header>
             <h1>Emma Loraine Johnson</h1>
-        </header> https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321"
+        </header>
         <main>
-            <img class="photoofme" src="C:\Users\Emper\WDD 230\emloraine.github.io\Professional Photo of me Smaller.jpg" alt="Photo of Emma">
+            <img class="photoofme" src="https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321" alt="Photo of Emma">
             <h2>CIT 230: Assignment Portal</h2>
+            <hr />
             <ul>
                  <li>Lesson 02: <a href="https://emloraine.github.io/lesson02.html">Assignment Link</a></li>
                  <li>Lesson 03: <a href="https://emloraine.github.io/lesson03.html">Assignment Link</a></li>
