--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Assignmnet portal for Emma Johnson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Emma Johnson Portal</title>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
     </head>
@@ -15,7 +16,7 @@
             <h1>Emma Loraine Johnson</h1>
         </header>
         <main>
-            <img class="photoofme" src="https://cdn.glitch.com/4d458c7c-7051-490e-b4e2-09d67b292662%2FProfessional%20Photo%20of%20me%20Smaller.jpg?v=1610235818321" alt="Photo of Emma">
+            <img class="photoofme" src="images\ProfessionalPhotoofmeSmaller.jpg" alt="Photo of Emma">
             <h2>CIT 230: Assignment Portal</h2>
             <hr />
             <ul>
